--- a/toolbox-ref/apple-iigs-toolbox-website/layouts/_default/list.html
+++ b/toolbox-ref/apple-iigs-toolbox-website/layouts/_default/list.html
@@ -104,6 +104,7 @@ Display Mode:
 {{ range $toolcalls }}
 
 {{ if ne $currentToolName .toolname }}
+{{ $currentToolName = .toolname }}
 
 <br/>
 <hr class="uncentered-hr">
@@ -114,7 +115,19 @@ Display Mode:
 <hr class="uncentered-hr">
 <hr class="uncentered-hr">
 <hr class="uncentered-hr">
-{{ $currentToolName = .toolname }}
+
+<table class="intro">
+  <tr><th colspan="3">{{ .toolname }} Calls</th></tr>
+  <tr class="intro_header"><th>Routine</th><th>#</th><th>Description</th></tr>
+  {{ range $tctmp := $toolcalls }}
+  {{ if eq $tctmp.toolname $currentToolName }}
+  <tr><td><a href="#{{ .toolcall | urlize }}">{{ .callname }}</a></td><td>${{ .toolcall }}{{ .toolnum }}</td><td>{{ .description }}</td></tr>
+  {{end}}
+  {{end}}
+</table>
+
+<br/>
+<h3>{{ .toolname }} Calls</h3>
 {{ end }}
   <div class="api">
   <br/>
