--- a/toolbox-ref/apple-iigs-toolbox-website/static/css/gstoolbox.css
+++ b/toolbox-ref/apple-iigs-toolbox-website/static/css/gstoolbox.css
@@ -292,3 +292,19 @@ table.stack em {
     border: none;
     border-top: 2px solid black;
 }
+
+
+a {
+    color: rgb(36, 9, 171);
+    text-decoration: none;
+    box-shadow: inset 0 0 0 0 #54b3d6;
+    /* color: #54b3d6; */
+    margin: 0 -.25rem;
+    padding: 0 .25rem;
+    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+}
+
+a:hover {
+    box-shadow: inset 300px 0 0 0 #54b3d6;
+    color: white;
+}
