add SANE and Integer Math, and 'info' type for parameters

--- a/toolbox-ref/apple-iigs-toolbox-website/layouts/_default/list.html
+++ b/toolbox-ref/apple-iigs-toolbox-website/layouts/_default/list.html
@@ -173,6 +173,8 @@ Display Mode:
 
     {{ if (.parameters.none) }}
       <p>The stack is not affected by this call.  There are no input or output parameters.</p>
+    {{ else if (.parameters.info) }}
+      <p>{{ .parameters.info }}</p>
     {{ else }}
 
 
