add Text Tool Set and new altcall for alternate C calling definitions

--- a/toolbox-ref/apple-iigs-toolbox-website/layouts/_default/list.html
+++ b/toolbox-ref/apple-iigs-toolbox-website/layouts/_default/list.html
@@ -271,7 +271,10 @@ Display Mode:
       <p>Call must not be made by an application.</p>
     {{ else }}
       <pre>{{ .c.call }} </pre>
-    
+      {{ if .c.altcall }}
+      <p>You can also use the following alternate form of the call:</p>
+      <pre>{{ .c.altcall }} </pre>
+      {{ end }}
     {{ end }}
     </div>
     {{ end }}
