adds Window uManager, RAMDisk, part of Menu Manager, most of my sanity

--- a/toolbox-ref/apple-iigs-toolbox-website/layouts/_default/list.html
+++ b/toolbox-ref/apple-iigs-toolbox-website/layouts/_default/list.html
@@ -71,9 +71,9 @@ Display Mode:
 {{ $currentToolName := "" }}
 
 <!-- Split into two parts for two columns -->
-<table>
+<table style="width:60%;">
   <tr>
-    <td>
+    <td style="width:50%;">
   <ul>
   {{ range $i, $e := $uniqueToolsSlice }}
     {{ if lt $i $midpoint }}
